# fastapi-books

./: .gitignore  app.py  config.py  db.py  pyproject.toml
models/: books_schema.py  response_schema.py
routes/: __init__.py  book_routes.py
services/: book_service.py
utils/: exception_handler.py
