[project]
name = "fastapi-books"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asyncpg>=0.31.0",
    "black==25.12.0",
    "click==8.3.1",
    "fastapi==0.124.4",
    "greenlet>=3.3.0",
    "h11==0.16.0",
    "idna==3.11",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.5.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings>=2.12.0",
    "pytokens==0.3.0",
    "sqlmodel>=0.0.27",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
]
